update subject page

--- a/app/assets/stylesheets/subject.css.scss
+++ b/app/assets/stylesheets/subject.css.scss
@@ -21,6 +21,7 @@ background-size: 100% auto;
 		text-align: center;
 		margin-left: 40px;
 		margin-bottom: 5px;
+		margin-top: 20px;
 
 	}
 	.icon {
@@ -46,11 +47,12 @@ background-size: 100% auto;
 		font-size: 1.20em;
 	}
 
-	.course-list {
-		font-family: 'Source Sans Pro', cursive;
-		color: black;
+	.course-list{
+		text-align: center;
 		
 	}
+	
+	
 
 	.subtopic {
 		text-align: center;
