--- a/app/assets/stylesheets/subject.css.scss
+++ b/app/assets/stylesheets/subject.css.scss
@@ -123,4 +123,12 @@ background-size: 100% auto;
    .student-nav {
     font-size: .75em;
    }
+
+   // .lesson-button {
+   // 	height: 100px;
+   // 	width: 100px;
+   // 	border-radius: 200px;
+   // 	color: white;
+   // 	text-align: center;
+   // }
 }
