--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -20,12 +20,12 @@
 	<br>
   <div class="row">
 
-    <div class="small-12 medium-8 large-6 columns medium-push-4 large-push-3">
+    <div class="large-6 columns medium-push-4 large-push-3">
 
       <!-- Feed Entry -->
       <div class="row">
         
-        <div class="small-9 large-10 columns">
+        <div class="large-10 columns">
         <h2><%= @subject.name %></h2>
 	               
         
@@ -53,6 +53,7 @@
         </div>      
         </div>
        </div>
+        <!-- <button class="rounded large"><h2 class="lesson-button">Start</h2></button> -->
       </div>
 		</div>
 </body>
