--- a/app/views/instructions/show.html.erb
+++ b/app/views/instructions/show.html.erb
@@ -9,7 +9,7 @@
 
 <div class="row">
   <div class="large-12 columns centered">
-    <div class="panel">
+    <div class="panel radius">
     <div class="field">
       <div class="subheader">
   		<p><%= @instruction.body %></p>    
