--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -17,7 +17,7 @@
         <div class="row"> 
          <div class="large-12 columns centered">
           <ul class="pricing table">
-            <div class="panel">
+            <div class="panel radius ">
               <h3><%= @question.body %></h3>
               <div class="slider"> 
                 <img src="<%= @question.image %>" width="100%" height="auto">  
@@ -33,7 +33,7 @@
                   <%end%>
                 </div> 
                 <div class="submit">
-                  <button class="button small" type="button">Check Answer</button> 
+                  <button class="button round small" type="button">Check Answer</button> 
                 </div>
                 <div class="panel-notify" style="display: none;">
                     <h4></h4>
@@ -63,7 +63,7 @@
 		// Compare with actual answer
 		if (user_choice == "<%= @question.correct_answer%>"){
 			$('.panel-notify').toggle();
-			$('.alert h1').addClass('success label').append("Correct!");
+			$('.alert h1').addClass('success round label').append("Correct!");
 			$('.submit').hide();
       $('.progress').toggle();
       $('.progress').show();			
@@ -73,7 +73,7 @@
 		}
 		else {
       $('.panel-notify').toggle('slide');
-			$('.alert h1').addClass('alert label').append("Incorrect!");
+			$('.alert h1').addClass('alert round label').append("Incorrect!");
       $('.panel-notify p').append("<%= @question.explanation %>");
 			$('.submit').toggle();
 			$('.progress').toggle();
