--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,7 @@
 		<!-- <div class="large-4 columns"> -->
     
 			<% if progress_report(@courses).empty? %>					
-    <div class="panel report">
+    <div class="panel radius report">
 	    	<div class="row"> 
     		 <h2 align="center">Get Started!</h2>  
     			<h3 align="center"><%= link_to "See Courses", user_subjects_path(current_user)%></h3>
@@ -27,7 +27,7 @@
 
    <div class="row">
     <div class="large-12 centered columns">   
-      <h5 class="left"><a href="<%= users_path(current_user)%>"><i class="fa fa-arrow-circle-left"> </i> Back</a></h5>
+      
       <h5 class="right"><a href="<%= user_subjects_path(current_user)%>">Back to Lessons <i class="fa fa-arrow-circle-right"></i></a></h5>       
       </div>      
   </div>
