--- a/app/assets/stylesheets/subject.css.scss
+++ b/app/assets/stylesheets/subject.css.scss
@@ -14,9 +14,10 @@ background-size: 100% auto;
 	}
 
 	.circular {
-		height: 200px;
-		width: 200px;
-		border-radius: 100px;
+		height: 250px;
+		width: 250px;
+		border-radius: 175px;
+		padding-top: 50px;
 		padding-left: 20px; 
 		text-align: center;
 		margin-left: 40px;
