--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -39,7 +39,7 @@
     
     <div class="large-4 columns centered">
       <div class="panel circular">
-      <h1>Read</h1>
+      <h1>Reading</h1>
       <h3 class="icon"><i class="fa fa-book fa-3x"></i></h3>
       </div>
       <div class="panel radius subtopic">        
@@ -66,7 +66,7 @@
               
     <div class="large-4 columns centered">
       <div class="panel circular">
-        <h1>Write</h1>
+        <h1>Writing</h1>
         <h3><i class="fa fa-pencil-square-o fa-3x"></i></h3>
       </div>
       <div class="panel radius subtopic">        
